--- a/SamplesConsole/SamplesConsole.csproj
+++ b/SamplesConsole/SamplesConsole.csproj
@@ -39,7 +39,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +56,10 @@
     <ProjectReference Include="..\ArgusLib.Functions\ArgusLib.Functions.csproj">
       <Project>{b1d05ed5-16f9-41de-b886-f1808ecd72d7}</Project>
       <Name>ArgusLib.Functions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ArgusLib.Numerics\ArgusLib.Numerics.csproj">
+      <Project>{e3ca84a8-8bba-40bf-bca1-9c2df00f309a}</Project>
+      <Name>ArgusLib.Numerics</Name>
     </ProjectReference>
     <ProjectReference Include="..\ArgusLib.Random\ArgusLib.Random.csproj">
       <Project>{e5030e23-b211-46de-8df9-fb16bb6703a2}</Project>
