--- a/SamplesConsole/SamplesConsole.csproj
+++ b/SamplesConsole/SamplesConsole.csproj
@@ -66,5 +66,13 @@
       <Name>ArgusLib.Random</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Runtime">
+      <Version>4.3.0</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+	<Target Name="PropsTest" BeforeTargets="CoreCompile">
+		<Message Text="Path: $(TargetFrameworkSDKToolsDirectory)" Importance="high" />
+	</Target>
 </Project>
